--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "test": "vitest --run"
   },
   "dependencies": {
+    "denque": "^2.1.0",
     "framer-motion": "^11.3.0",
     "idb": "^8.0.0",
+    "lru-cache": "^11.2.6",
     "lucide-react": "^0.563.0",
     "nostr-tools": "^2.7.0",
+    "p-limit": "^5.0.0",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
