--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "test": "vitest --run"
   },
   "dependencies": {
+    "@scure/base": "^2.0.0",
     "denque": "^2.1.0",
+    "fast-json-stable-stringify": "^2.1.0",
     "framer-motion": "^11.3.0",
     "idb": "^8.0.0",
+    "linkify-it": "^5.0.0",
     "lru-cache": "^11.2.6",
     "lucide-react": "^0.563.0",
     "nostr-tools": "^2.7.0",
@@ -26,6 +29,7 @@
     "webtorrent": "^2.5.12"
   },
   "devDependencies": {
+    "@types/linkify-it": "^5.0.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
