--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "honeytrap",
   "private": true,
-  "version": "0.1.7",
+  "version": "0.1.8",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -26,7 +26,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.13.0",
     "react-virtuoso": "^4.18.1",
-    "webtorrent": "^2.5.12"
+    "webtorrent": "^2.5.12",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/linkify-it": "^5.0.0",
